Cycles Multiple Importance Map for Animated Environment Texture Movie Doesn't Update on Frame Change #49180

Closed
opened 2016-08-28 00:44:39 +02:00 by Ted Schundler · 8 comments
Member

It seems the multiple importance map for the environment texture doesn't update on frame changes (at least not in the viewport). I did a test with the intended future use case being an environment map built by HDR Fisheye sky time lapses. I'm using with a build from latest git, as well as 2.77 release on OSX.

Maybe related: #48298, #43514

To reproduce:

  • Set up an environment texture with a small bright light source. (I did an experiment with a flashlight and a mirrorball to test dynamic environment lighting - I can upload the frame sequence somewhere + blend if it would help)
  • Looks great - not much noise:
 {F345429}
  • Change frames to somewhere else - suddenly the viewport is very noisy after even more samples, and the color is wrong:
 {F345431}
  • check & uncheck the multiple importance option for the environment, and it seems to rebuild the map, and a relatively clean image is produced again:
 {F345433}
It seems the multiple importance map for the environment texture doesn't update on frame changes (at least not in the viewport). I did a test with the intended future use case being an environment map built by HDR Fisheye sky time lapses. I'm using with a build from latest git, as well as 2.77 release on OSX. Maybe related: #48298, #43514 To reproduce: * Set up an environment texture with a small bright light source. (I did an experiment with a flashlight and a mirrorball to test dynamic environment lighting - I can upload the frame sequence somewhere + blend if it would help) * Looks great - not much noise: ``` {F345429} ``` * Change frames to somewhere else - suddenly the viewport is very noisy after even more samples, and the color is wrong: ``` {F345431} ``` * check & uncheck the multiple importance option for the environment, and it seems to rebuild the map, and a relatively clean image is produced again: ``` {F345433} ```
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @TedSchundler

Added subscriber: @TedSchundler

Added subscriber: @Sergey

Added subscriber: @Sergey

Please attach all files needed to reproduce the issue.

Please attach all files needed to reproduce the issue.
Author
Member

Here's a simplified test case .blend + image sequence: multiple_importance_bug.zip

Here's a simplified test case .blend + image sequence: [multiple_importance_bug.zip](https://archive.blender.org/developer/F347585/multiple_importance_bug.zip)
Sergey Sharybin self-assigned this 2016-09-02 09:24:55 +02:00

This issue was referenced by blender/cycles@b38b5934a3

This issue was referenced by blender/cycles@b38b5934a395b2bdd6bbed7e562213a27ce23875

This issue was referenced by b399a6d33f

This issue was referenced by b399a6d33f9b133a26d38fd0e1e5321cbef0693b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49180
No description provided.